k8s/optigrade/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: optigrade
  labels:
    app.kubernetes.io/name: optigrade
